--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!doctype html>
-<html lang="zh">
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>示例页面</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>My Page</title>
   <style>
     body {
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      height:100vh;
-      font: 24px/1.5 system-ui, sans-serif;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      font: 20px system-ui, sans-serif;
+      background: #fafafa;
+    }
+    img {
+      max-width: 300px;
+      border-radius: 12px;
+      margin-bottom: 20px;
     }
   </style>
 </head>
 <body>
-  金泰亨的够死于自杀
+  <img src="photo.jpg" alt="My picture">
+  <div>Hello World!</div>
 </body>
 </html>
