--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body>
-  <img src="photo.jpg" alt="My picture">
+  <img src="Screenshot 2025-10-06 201356.png" alt="My picture">
   <div>Hello World!</div>
 </body>
 </html>
