--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 </head>
 <body>
   <img src="Screenshot 2025-10-06 201356.png" alt="My picture">
-  <div>Hello World!</div>
+  <div>金泰亨的狗死于自杀</div>
 </body>
 </html>
