--- a/index.html
+++ b/index.html
@@ -1,29 +1,104 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Scheiße!</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Your Name</title>
+  <meta name="description" content="Personal website of Your Name" />
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🧠</text></svg>">
+
   <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      font: 20px system-ui, sans-serif;
-      background: #fafafa;
+    :root{
+      --maxw: 780px;
+      --fg: #0a0a0a;
+      --muted:#555;
+      --link:#0b5fff;
+      --bg:#fff;
+      --rule:#eee;
     }
-    img {
-      max-width: 300px;
-      border-radius: 12px;
-      margin-bottom: 20px;
+    html { color-scheme: light dark; }
+    body{
+      margin:0; background:var(--bg); color:var(--fg);
+      font: 16px/1.65 system-ui, -apple-system, Segoe UI, Roboto, Arial, "Helvetica Neue", Helvetica, sans-serif;
+      -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility;
+      padding: 32px 18px 80px;
+    }
+    main{ max-width: var(--maxw); margin: 0 auto; }
+    header{ margin-bottom: 28px; }
+    h1{ font-size: clamp(28px, 5vw, 44px); margin: 0 0 4px; letter-spacing:-0.02em; }
+    .contact{ display:flex; gap:14px; align-items:center; flex-wrap: wrap; color:var(--muted); }
+    .contact a{ color:var(--fg); text-decoration: none; border-bottom:1px solid transparent; }
+    .contact a:hover{ border-bottom-color: currentColor; }
+    .icons{ display:flex; gap:12px; align-items:center; }
+    .icons a{ display:inline-flex; width:22px; height:22px; opacity:.8 }
+    .icons a:hover{ opacity:1 }
+    p.lead{ margin: 18px 0; font-size: 18px;}
+    section{ margin: 30px 0 22px; }
+    h2{ font-size: 20px; letter-spacing:.02em; margin: 26px 0 10px; border-top:1px solid var(--rule); padding-top:18px;}
+    h3{ font-size: 17px; margin: 16px 0 4px; }
+    ul{ padding-left: 1.1em; margin: 6px 0 0; }
+    li+li{ margin-top:4px; }
+    footer{ margin-top:36px; color:var(--muted); font-size:14px; }
+    /* responsive niceties */
+    @media (prefers-reduced-motion:no-preference){
+      a{ transition: opacity .15s ease, border-color .15s ease; }
     }
   </style>
 </head>
 <body>
-  <img src="Screenshot 2025-10-06 201356.png" alt="My picture">
-  <div>金泰亨的狗死于自杀</div>
+  <main>
+    <header>
+      <h1>Your Name</h1>
+      <div class="contact">
+        <div><a href="mailto:you@domain.com">you [at] domain [dot] com</a></div>
+        <div class="icons" aria-label="Social links">
+          <a href="https://www.linkedin.com/" aria-label="LinkedIn" title="LinkedIn">
+            <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0zM8 8.98h4.78v2.05h.07c.66-1.25 2.27-2.57 4.66-2.57 4.98 0 5.9 3.28 5.9 7.54V24H18v-6.73c0-1.6-.03-3.66-2.23-3.66-2.23 0-2.57 1.74-2.57 3.54V24H8z"/></svg>
+          </a>
+          <a href="https://x.com/" aria-label="X">
+            <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M18.244 2H21l-7.5 8.574L22.5 22H15.9l-6.16-7.3L3.5 22H1l8.32-9.507L1.5 2h6.7l5.6 6.65L18.244 2z"/></svg>
+          </a>
+          <a href="https://github.com/" aria-label="GitHub">
+            <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 .5A11.5 11.5 0 0 0 .5 12.3c0 5.23 3.41 9.66 8.15 11.23.6.12.82-.27.82-.6v-2.12c-3.32.74-4.02-1.6-4.02-1.6-.55-1.43-1.35-1.81-1.35-1.81-1.1-.77.08-.75.08-.75 1.21.09 1.85 1.26 1.85 1.26 1.08 1.87 2.84 1.33 3.53 1.02.11-.8.42-1.33.76-1.64-2.65-.31-5.44-1.37-5.44-6.1 0-1.35.47-2.45 1.25-3.31-.12-.31-.54-1.58.12-3.3 0 0 1.01-.33 3.31 1.26a11.3 11.3 0 0 1 6.02 0c2.3-1.59 3.31-1.26 3.31-1.26.66 1.72.24 2.99.12 3.3.78.86 1.25 1.96 1.25 3.31 0 4.74-2.79 5.78-5.45 6.09.43.37.82 1.1.82 2.23v3.3c0 .33.21.73.82.6A11.53 11.53 0 0 0 23.5 12.29 11.5 11.5 0 0 0 12 .5Z"/></svg>
+          </a>
+        </div>
+      </div>
+      <p class="lead">Hi, I’m Your Name. I’m interested in RL and building cool software for hardware applications :)</p>
+      <p class="lead"><strong>Currently:</strong> CEO at <em>Your Co</em> (YC S25). Building foundation models for computational design and CAD optimization.</p>
+    </header>
+
+    <section id="education">
+      <h2>EDUCATION</h2>
+      <h3>University Name</h3>
+      <p>B.S. in Something</p>
+      <p><strong>Relevant courseload:</strong> Course A, Course B, Course C</p>
+      <p><strong>Activities:</strong> Club X, Competition Y</p>
+
+      <h3>High School</h3>
+      <p>High School Diploma</p>
+      <p><strong>Activities:</strong> Team A, Team B</p>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <h3>Project One</h3>
+      <p>One-line description.</p>
+      <p><em>@ Hackathon / Org</em></p>
+
+      <h3>Project Two</h3>
+      <p>One-line description.</p>
+      <p><em>@ Event</em></p>
+    </section>
+
+    <section id="awards">
+      <h2>Awards</h2>
+      <ul>
+        <li>1st Place, 2025 Something Hackathon</li>
+        <li>Finalist, 2024 Competition</li>
+      </ul>
+    </section>
+
+    <footer>© 2025 by Your Name</footer>
+  </main>
 </body>
 </html>
