Add full CV content

--- a/cv/index.html
+++ b/cv/index.html
@@ -11,7 +11,7 @@
   <div class="wrapper">
     <header>
       <h1 style="margin-bottom:6px;">Julian Wendt</h1>
-      <div class="meta">International Security · International Political Economy · Sanctions & Trade Diversion</div>
+      <div class="meta">Diplomacy and International Relations</div>
       <nav aria-label="Primary">
         <a href="/">Home</a>
         <a href="/blog/">Blog</a>
@@ -24,100 +24,125 @@
     </header>
 
     <main class="cv">
-      <!-- HEADER BLOCK -->
+
       <section class="cv-grid avoid-break">
         <div>
           <h2>Contact</h2>
-          <p>Email: <a href="mailto:julianwendtjw@gmail.com">julianwendtjw@gmail.com</a><br>
-             GitHub: <a href="https://github.com/julianwendtjw">github.com/julianwendtjw</a><br>
-             Website: <a href="https://julianwendt.com">julianwendt.com</a></p>
+          <p>
+            Email: <a href="mailto:julianwendtjw@gmail.com">julianwendtjw@gmail.com</a><br>
+            GitHub: <a href="https://github.com/julianwendtjw">github.com/julianwendtjw</a><br>
+            Website: <a href="https://julianwendt.com">julianwendt.com</a>
+          </p>
         </div>
         <div>
           <h2>Profile</h2>
           <p>
-            Dual Master’s (Sciences Po Paris / PKU SIS). Focus on sanctions, trade diversion, and global governance.
-            Thesis on Russia’s post-2022 sanctions evasion via third countries. Strong in quantitative methods (R/Stata)
-            and policy analysis.
+            Dual-degree master’s student in Diplomacy and International Relations (Sciences Po Paris / Peking University SIS) focusing on sanctions, global governance, and trade policy. Experienced in international organizations, risk analysis, and multilateral diplomacy.
           </p>
         </div>
       </section>
 
       <hr class="hr" />
 
-      <!-- EDUCATION -->
+      <section class="cv-sec avoid-break">
+        <h2>Work Experience</h2>
+
+        <div class="item">
+          <div class="role">Project Assistant — Munich Security Conference</div>
+          <div class="meta">Oct 2025 – present · Berlin, Germany</div>
+          <p>Creating side events and engagements for high-level participants in cooperation with partner institutions and companies.</p>
+        </div>
+
+        <div class="item">
+          <div class="role">Government Affairs Intern — United Nations Development Programme</div>
+          <div class="meta">Apr 2025 – Jul 2025 · Beijing, China</div>
+          <ul>
+            <li>Delivered guidelines and propositions on digital transformation and economic policy to local governments in Northeast Asia.</li>
+            <li>Conducted in-depth analyses and advised on key policy topics and international developments to inform policy decisions.</li>
+          </ul>
+        </div>
+
+        <div class="item">
+          <div class="role">Planning Intern — UN Executive Office of the Secretary-General (SPMU)</div>
+          <div class="meta">Apr 2024 – Aug 2024 · New York, USA</div>
+          <ul>
+            <li>Contributed to the UN Global Risk Report by preparing analytical materials on technological, economic, and political risks and coordinating consultations with UN agencies and external stakeholders.</li>
+            <li>Supported the UN 2.0 initiative by collecting and visualizing data, identifying strategic insights, and writing a progress report on modernization proposals for UN agencies.</li>
+            <li>Drafted two Secretary-General’s Planning Directives to guide field-level personnel responding to crises.</li>
+            <li>Authored speeches on monitoring and combatting global risks for Under-Secretary-General Guy Ryder.</li>
+            <li>Managed the review of the UN Transitions Policy as focal point for the 30-person core review group.</li>
+          </ul>
+        </div>
+
+        <div class="item">
+          <div class="role">Research & Event Management Intern — German-Southeast Asian Center of Excellence for Policy and Governance</div>
+          <div class="meta">Mar 2022 – Oct 2022 · Bangkok, Thailand</div>
+          <ul>
+            <li>Researched and contacted speakers; moderated conferences on economic cooperation and global trade.</li>
+            <li>Contributed weekly reports on East and Central Asian developments for “Asia in Review”.</li>
+          </ul>
+        </div>
+
+        <div class="item">
+          <div class="role">Research Assistant — Fraunhofer Institute for Production Technology and Automation</div>
+          <div class="meta">Jul 2021 – Apr 2022 · Stuttgart, Germany</div>
+          <p>Analyzed large datasets for a study on barriers to digitalization in German small and mid-sized enterprises.</p>
+        </div>
+
+        <div class="item">
+          <div class="role">Board Member / Head of Customer Relations & Junior Consultant — Inone Consult</div>
+          <div class="meta">Oct 2020 – Sep 2022 · Tübingen, Germany</div>
+          <p>Devised and implemented a new acquisition strategy securing twelve consulting projects and building partnerships.</p>
+        </div>
+      </section>
+
       <section class="cv-sec avoid-break">
         <h2>Education</h2>
 
         <div class="item">
-          <div class="role">MA, International Security (Sciences Po Paris)</div>
-          <div class="where">Double degree with PKU SIS</div>
-          <div class="meta">2024–2026</div>
+          <div class="role">LL.M. International Affairs — Peking University (SIS)</div>
+          <div class="meta">Sep 2024 – Jul 2025 · Beijing, China</div>
+          <p>Master’s thesis on the role of Central Asian countries in alleviating the impact of sanctions on Russia after the Ukraine war.</p>
         </div>
 
         <div class="item">
-          <div class="role">MA, International Affairs (Peking University, SIS)</div>
-          <div class="where">Thesis: “International Sanctions & Third Countries: Russia’s Evasion after 2022”</div>
-          <div class="meta">2024–2026</div>
+          <div class="role">M.A. International Security — Sciences Po Paris</div>
+          <div class="meta">Sep 2023 – Jul 2024 · Paris, France</div>
+          <p>Concentration in Global Economy with coursework on European Defense Policy, Econometrics, and International Law.</p>
+        </div>
+
+        <div class="item">
+          <div class="role">B.A. Political Science — University of Tübingen</div>
+          <div class="meta">Sep 2019 – Aug 2023 · Tübingen, Germany</div>
+          <p>Bachelor’s thesis: “Creating an Alternative? The Impact of Ukraine War Sanctions on Renminbi Internationalization”.</p>
         </div>
       </section>
 
-      <!-- EXPERIENCE -->
       <section class="cv-sec avoid-break">
-        <h2>Experience</h2>
+        <h2>Extracurricular Activities</h2>
 
         <div class="item">
-          <div class="role">Project Assistant (Partnerships & Development)</div>
-          <div class="where">Munich Security Conference</div>
-          <div class="meta">2025 — Berlin/Munich (planned)</div>
-          <p>Support partner relations, briefs, and event logistics across high-level security dialogues.</p>
+          <div class="role">Digital Seeds Talent Program Winner — Huawei</div>
+          <div class="meta">Apr 2022 – Jul 2022</div>
+          <p>Led a team of five among 200 competitors to conceptualize and pitch a startup using drones in emergency services.</p>
         </div>
 
         <div class="item">
-          <div class="role">Intern, Executive Office of the UN Secretary-General</div>
-          <div class="where">Global Risk Report Team</div>
-          <div class="meta">2024–2025 — New York (remote/hybrid)</div>
-          <p>Research inputs on global risk trends; contributed to drafting and data-driven sections.</p>
-        </div>
-
-        <div class="item">
-          <div class="role">Consultations Coordinator</div>
-          <div class="where">Greater Tumen Initiative (UNDP-supported)</div>
-          <div class="meta">2024 — Beijing/Seoul</div>
-          <p>Organized international consultations; consolidated inputs for regional cooperation agenda.</p>
+          <div class="role">Tutor and Administrative Assistant — Refugee Home Stuttgart</div>
+          <div class="meta">Jan 2018 – Jan 2019</div>
+          <p>Supported administrative management of the refugee home and tutored five refugees regularly.</p>
         </div>
       </section>
 
-      <!-- METHODS / SKILLS -->
       <section class="cv-sec avoid-break">
-        <h2>Methods & Tools</h2>
+        <h2>Additional Information</h2>
         <ul>
-          <li>Econometrics: panel, event-study, PPML (trade gravity)</li>
-          <li>R, Stata, EViews, Excel; LaTeX for publication-style outputs</li>
-          <li>Data: UN Comtrade, sanctions datasets, WTO RTA</li>
+          <li><strong>Languages:</strong> German (native), English (C2 TOEFL 120/120), Chinese (C1 HSK 6 218/300 HSKK Advanced), French (intermediate)</li>
+          <li><strong>IT:</strong> Advanced in MS Office Suite, R, LaTeX; intermediate in Stata; basic in Python</li>
+          <li><strong>Scholarships:</strong> Baden-Württemberg Scholarship, DAAD (full exchange + graduate), Chinese Scholarship Council, Peking University Scholarship</li>
         </ul>
       </section>
 
-      <!-- LANGUAGES -->
-      <section class="cv-sec avoid-break">
-        <h2>Languages</h2>
-        <ul>
-          <li>German (native), English (C2), French (C1), Chinese (HSK6)</li>
-        </ul>
-      </section>
-
-      <!-- PUBLICATIONS / WRITING -->
-      <section class="cv-sec avoid-break">
-        <h2>Selected Writing</h2>
-        <ul>
-          <li>Working paper: <em>International Sanctions & Third Countries</em> (2025)</li>
-          <li>Policy notes on trade diversion & sanctions compliance (ongoing)</li>
-        </ul>
-      </section>
-
-      <!-- OPTIONAL PAGE BREAK
-      <div class="pb"></div>
-      Add more sections beyond this line and they will print on a new page.
-      -->
     </main>
 
     <footer>© <span id="y"></span> Julian Wendt</footer>
