Update navigation: remove Publications

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   	<a href="/">Home</a>
   	<a href="/blog/">Blog</a>
   	<a href="/cv/">CV</a>
-  	<a href="#publications">Publications</a>
  	 <a href="#contact">Contact</a>
 	</nav>
     </header>
@@ -25,21 +24,11 @@
       <section id="about">
         <h2>About</h2>
         <p>
-          I’m a dual Master’s student (Sciences Po Paris / Peking University, SIS) focusing on sanctions,
-          trade diversion, and global governance. My current thesis explores Russia’s post-2022 sanctions
-          evasion via third countries.
+        I am currently working as a Project Assistant with the Partnership & Development team at the Munich Security Conference, having previously 	interned in the United Nations System as well as German think-tanks and research institutions. I hold graduate degrees in International Security 	from Sciences Po and International Affairs from Peking University. I am interested in Geopolitics, International Political Economy, China, and 	Politics overall. Thank you for visiting my website. 
         </p>
       </section>
 
       <hr class="hr" />
-
-      <section id="publications">
-        <h2>Selected Publications</h2>
-        <ul>
-          <li><strong>Working paper:</strong> “International Sanctions and the Role of Third Countries” (2025)</li>
-          <!-- Add more items here -->
-        </ul>
-      </section>
 
       <section id="contact">
         <h2>Contact</h2>
