Revise CV layout and content

--- a/cv/index.html
+++ b/cv/index.html
@@ -22,32 +22,16 @@
 
     <main class="cv">
 
-      <section class="cv-grid avoid-break">
-        <div>
-          <h2>Contact</h2>
-          <p>
-            Email: <a href="mailto:julianwendtjw@gmail.com">julianwendtjw@gmail.com</a><br>
-            GitHub: <a href="https://github.com/julianwendtjw">github.com/julianwendtjw</a><br>
-            Website: <a href="https://julianwendt.com">julianwendt.com</a>
-          </p>
-        </div>
-        <div>
-          <h2>Profile</h2>
-          <p>
-            Dual-degree master’s student in Diplomacy and International Relations (Sciences Po Paris / Peking University SIS) focusing on sanctions, global governance, and trade policy. Experienced in international organizations, risk analysis, and multilateral diplomacy.
-          </p>
-        </div>
-      </section>
-
-      <hr class="hr" />
-
+      <!-- WORK EXPERIENCE -->
       <section class="cv-sec avoid-break">
         <h2>Work Experience</h2>
 
         <div class="item">
           <div class="role">Project Assistant — Munich Security Conference</div>
           <div class="meta">Oct 2025 – present · Berlin, Germany</div>
-          <p>Creating side events and engagements for high-level participants in cooperation with partner institutions and companies.</p>
+          <ul>
+            <li>Creating side events and engagements for high-level participants in cooperation with partner institutions and companies.</li>
+          </ul>
         </div>
 
         <div class="item">
@@ -83,54 +67,71 @@
         <div class="item">
           <div class="role">Research Assistant — Fraunhofer Institute for Production Technology and Automation</div>
           <div class="meta">Jul 2021 – Apr 2022 · Stuttgart, Germany</div>
-          <p>Analyzed large datasets for a study on barriers to digitalization in German small and mid-sized enterprises.</p>
+          <ul>
+            <li>Analyzed large datasets for a study on barriers to digitalization in German small and mid-sized enterprises.</li>
+          </ul>
         </div>
 
         <div class="item">
           <div class="role">Board Member / Head of Customer Relations & Junior Consultant — Inone Consult</div>
           <div class="meta">Oct 2020 – Sep 2022 · Tübingen, Germany</div>
-          <p>Devised and implemented a new acquisition strategy securing twelve consulting projects and building partnerships.</p>
+          <ul>
+            <li>Devised and implemented a new acquisition strategy securing twelve consulting projects and building partnerships.</li>
+          </ul>
         </div>
       </section>
 
+      <!-- EDUCATION -->
       <section class="cv-sec avoid-break">
         <h2>Education</h2>
 
         <div class="item">
           <div class="role">LL.M. International Affairs — Peking University (SIS)</div>
           <div class="meta">Sep 2024 – Jul 2025 · Beijing, China</div>
-          <p>Master’s thesis on the role of Central Asian countries in alleviating the impact of sanctions on Russia after the Ukraine war.</p>
+          <ul>
+            <li>Master’s thesis on the role of Central Asian countries in alleviating the impact of sanctions on Russia after the Ukraine war.</li>
+          </ul>
         </div>
 
         <div class="item">
           <div class="role">M.A. International Security — Sciences Po Paris</div>
           <div class="meta">Sep 2023 – Jul 2024 · Paris, France</div>
-          <p>Concentration in Global Economy with coursework on European Defense Policy, Econometrics, and International Law.</p>
+          <ul>
+            <li>Concentration in Global Economy with coursework on European Defense Policy, Econometrics, and International Law.</li>
+          </ul>
         </div>
 
         <div class="item">
           <div class="role">B.A. Political Science — University of Tübingen</div>
           <div class="meta">Sep 2019 – Aug 2023 · Tübingen, Germany</div>
-          <p>Bachelor’s thesis: “Creating an Alternative? The Impact of Ukraine War Sanctions on Renminbi Internationalization”.</p>
+          <ul>
+            <li>Bachelor’s thesis: “Creating an Alternative? The Impact of Ukraine War Sanctions on Renminbi Internationalization”.</li>
+          </ul>
         </div>
       </section>
 
+      <!-- EXTRACURRICULAR -->
       <section class="cv-sec avoid-break">
         <h2>Extracurricular Activities</h2>
 
         <div class="item">
           <div class="role">Digital Seeds Talent Program Winner — Huawei</div>
           <div class="meta">Apr 2022 – Jul 2022</div>
-          <p>Led a team of five among 200 competitors to conceptualize and pitch a startup using drones in emergency services.</p>
+          <ul>
+            <li>Led a team of five among 200 competitors to conceptualize and pitch a startup using drones in emergency services.</li>
+          </ul>
         </div>
 
         <div class="item">
           <div class="role">Tutor and Administrative Assistant — Refugee Home Stuttgart</div>
           <div class="meta">Jan 2018 – Jan 2019</div>
-          <p>Supported administrative management of the refugee home and tutored five refugees regularly.</p>
+          <ul>
+            <li>Supported administrative management of the refugee home and tutored five refugees regularly.</li>
+          </ul>
         </div>
       </section>
 
+      <!-- ADDITIONAL INFORMATION -->
       <section class="cv-sec avoid-break">
         <h2>Additional Information</h2>
         <ul>
