Restore Download CV button

--- a/cv/index.html
+++ b/cv/index.html
@@ -12,12 +12,17 @@
     <header>
       <h1 style="margin-bottom:6px;">Julian Wendt</h1>
       <div class="meta">Diplomacy and International Relations</div>
-      <nav aria-label="Primary">
-        <a href="/">Home</a>
-        <a href="/blog/">Blog</a>
-        <a href="/cv/">CV</a>
-      </nav>
-      <hr class="hr" />
+     <nav aria-label="Primary">
+  <a href="/">Home</a>
+  <a href="/blog/">Blog</a>
+  <a href="/cv/">CV</a>
+</nav>
+
+<p style="margin-top:12px;">
+  <a class="print-btn" href="/cv/CV_website.pdf" target="_blank" rel="noopener">Download CV (PDF)</a>
+</p>
+
+<hr class="hr" />
     </header>
 
     <main class="cv">
