Update homepage subheading and replace Contact button

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
   <div class="wrapper">
     <header>
       <h1 style="margin-bottom:6px;">Julian Wendt</h1>
-      <div class="meta">Diplomacy and International Relations</div>
+      <div class="meta">MA International Security, Sciences Po Paris · MA International Affairs, Peking University</div>
       <nav aria-label="Primary">
   	<a href="/">Home</a>
   	<a href="/blog/">Blog</a>
   	<a href="/cv/">CV</a>
- 	 <a href="#contact">Contact</a>
 	</nav>
     </header>
 
