Update first blog post content

--- a/cv/index.html
+++ b/cv/index.html
@@ -11,7 +11,7 @@
   <div class="wrapper">
     <header>
       <h1 style="margin-bottom:6px;">Julian Wendt</h1>
-      <div class="meta">Diplomacy and International Relations</div>
+      <div class="meta"></div>
      <nav aria-label="Primary">
   <a href="/">Home</a>
   <a href="/blog/">Blog</a>
