Update first blog post content

--- a/cv/index.html
+++ b/cv/index.html
@@ -98,7 +98,7 @@
 
       <!-- EXTRACURRICULAR -->
       <section class="cv-sec avoid-break">
-        <h2>Extracurricular Activities</h2>
+        <h2>Activities and Engagement</h2>
 
         <div class="item">
           <div class="role">Digital Seeds Talent Program Winner — Huawei</div>
