Update first blog post content

--- a/cv/index.html
+++ b/cv/index.html
@@ -119,8 +119,8 @@
       <section class="cv-sec avoid-break">
         <h2>Additional Information</h2>
         <ul>
-          <li><strong>Languages:</strong> German (native), English (C2 TOEFL 120/120), Chinese (C1 HSK 6 218/300 HSKK Advanced), French (intermediate)</li>
-          <li><strong>IT:</strong> Advanced in MS Office Suite, R, LaTeX; intermediate in Stata; basic in Python</li>
+          <strong>Languages:</strong> German (native), English (C2 TOEFL 120/120), Chinese (C1 HSK 6 218/300 HSKK Advanced), French (intermediate)
+          <strong>IT:</strong> Advanced in MS Office Suite, R, LaTeX; intermediate in Stata; basic in Python
         </ul>
       </section>
 
