--- a/cv/index.html
+++ b/cv/index.html
@@ -116,13 +116,11 @@
       </section>
 
       <!-- ADDITIONAL INFORMATION -->
-      <section class="cv-sec avoid-break">
-        <h2>Additional Information</h2>
-        <ul>
-          <strong>Languages:</strong> German (native), English (C2 TOEFL 120/120), Chinese (C1 HSK 6 218/300 HSKK Advanced), French (intermediate)
-          <strong>IT:</strong> Advanced in MS Office Suite, R, LaTeX; intermediate in Stata; basic in Python
-        </ul>
-      </section>
+<section class="cv-sec avoid-break">
+  <h2>Additional Information</h2>
+  <p><strong>Languages:</strong> German (native), English (C2 TOEFL 120/120), Chinese (C1 HSK 6 218/300 HSKK Advanced), French (intermediate)</p>
+  <p><strong>IT:</strong> Advanced in MS Office Suite, R, LaTeX; intermediate in Stata; basic in Python</p>
+</section>
 
     </main>
 
